# bpkad-superapps

./: .gitignore  2.15.0.00.0.00.01.0000 - Dinas Perhubungan.json  LICENSE  Laporan Realisasi Per Dokumen (2).xlsx  index.html  package-lock.json  package.json  rekap_belanja.xlsx  rekapver4.xlsx  rekapver5.xlsx  subkegiatan_pmk.xlsx  subkegiatan_pmk2026.xlsx  sumber_dana_2026-06-15.xlsx
api/: migrate-fresh.js  migrate.js  package-lock.json  package.json  seed.js
api/migrations/: 001_initial_schema.js  002_tahun_anggaran.js  003_realisasi_rows.js  004_referensi.js  005_sumber_data.js  2026_01_01_000001_create_users_table.js  2026_01_01_000002_create_tahun_anggaran_table.js  2026_01_01_000003_create_skpd_table.js  2026_01_01_000004_create_realisasi_table.js  2026_01_01_000005_create_subkegiatan_pmk_table.js  2026_01_01_000006_create_anggaran_rekap_table.js  2026_01_01_000007_create_dokumen_realisasi_table.js  2026_01_01_000008_add_bulan_to_dokumen_realisasi.js  2026_01_01_000009_create_api_keys_table.js
api/src/: db.js  index.js
api/src/middleware/: apiKey.js  auth.js
api/src/routes/: anggaranRekap.js  (+11 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0001_initial.sql
src-tauri/src/: lib.rs  main.rs
src/components/: RekapRealisasiNode.vue
src/router/: index.js
src/stores/: auth.js  tahun.js
src/utils/: api.js
src/views/: AnggaranRekapView.vue  DokumenRealisasiView.vue  HomeView.vue  LayoutView.vue  LoginView.vue  MappingPMKView.vue  PaketAnggaranView.vue  RealisasiView.vue  RekapRealisasiView.vue  SelectYearView.vue  SubkegiatanPMKView.vue
(+3 files in other folders)
