[package]
name = "bpkad-superapps"
version = "0.1.0"
description = "BPKAD Superapps"
authors = ["BPKAD"]
edition = "2021"

[lib]
name = "bpkad_superapps_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
